--- a/client/components/navbar/navbar.css
+++ b/client/components/navbar/navbar.css
@@ -1,13 +1,40 @@
-.navbar{
+navbar{
+	position: fixed;
 	display:block;
-	height:100vh;
-	width:200px!important;
-	background:yellow!important;
+	top:0;
+	left:0;
+	bottom:0;
+	width:200px;
+	background:purple;
+	font-size: 0;
 }
 .navbar-collapse{
 	display: block!important;
 	width: 100%!important;
 }
-nav{
-	
+navbar li{
+	list-style: none;
+}
+.logo-section{
+	text-align: center;
+	height:75px;
+}
+navbar a,
+navbar li{
+	font-size: 16px;
+}
+
+.user-profile-views li{
+	width: 50%;
+	height:30px;
+	display: inline-block;
+}
+
+@media (max-width: 800px) {
+  navbar {
+		right:0;
+		width:100%;
+		height:35px;
+		z-index:100
+	}
 }
